--- a/index.html
+++ b/index.html
@@ -14,6 +14,38 @@
     <title>CV</title>
   </head>
 <body>
-  
+  <header class="header wrapper">
+    <div class="logo">
+      <img src="assets/svg/logo.png" alt="">
+    </div>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="#contacts" class="nav__link">Contacts</a>
+        </li>
+        <li class="nav__item">
+          <a href="#summary" class="nav__link">Summary</a>
+        </li>
+        <li class="nav__item">
+          <a href="#skills" class="nav__link">Skills</a>
+        </li>
+        <li class="nav__item">
+          <a href="#code" class="nav__link">Code</a>
+        </li>
+        <li class="nav__item">
+          <a href="#projects" class="nav__link">Projects</a>
+        </li>
+        <li class="nav__item">
+          <a href="#courses" class="nav__link">Courses</a>
+        </li>
+        <li class="nav__item">
+          <a href="#language" class="nav__link">Language</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="menu__hamburger">
+      <span></span>
+    </div>
+  </header>
 </body>
 </html>
