feat: add left block in main

--- a/index.html
+++ b/index.html
@@ -47,5 +47,43 @@
       <span></span>
     </div>
   </header>
+  <main class="wrapper">
+    <div class="block__left">
+      <section class="section section__profile">
+        <h1>Oleh Lebediev</h1>
+        <h3>Studying <br> Front-End Development</h3>
+        <figure class="image__profile">
+          <img src="assets/img/avatar1.jpeg" alt="Photo Oleh Lebediev">
+        </figure>
+      </section>
+      <section class="section section__contacts" id="contacts">
+        <h2>Contacts</h2>
+        <ul class="contact__item">
+          <li class="contact__list">
+            <a href="https://www.google.com/maps/@46.6488224,32.621587,11z" target="_blank" rel="noopener noreferrer"
+              title="map" class="main__link">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="contact__list">
+            <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github"
+              class="main__link">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="contact__list">
+            <a href="malito:oleg1le@gmail.com" title="email" class="main__link">
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="contact__list">
+            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link">
+              <i class="fa fa-telegram" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
