--- a/index.html
+++ b/index.html
@@ -167,5 +167,22 @@
       </section>
     </div>
   </main>
+  <footer class="wrapper">
+    <ul class="footer__list">
+      <li class="footer__item">
+        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github">
+          <div class="footer__github"></div>
+        </a>
+      </li>
+      <li class="footer__item">
+        <p class="footer__year">© 2022</p>
+      </li>
+      <li class="footer__item">
+        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool">
+          <div class="footer__rsschool"></div>
+        </a>
+      </li>
+    </ul>
+  </footer>
 </body>
 </html>
