--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#contacts" class="nav__link" name="contacts">Contacts</a>
+          <a href="#contacts" class="nav__link" alt="contacts">Contacts</a>
         </li>
         <li class="nav__item">
-          <a href="#summary" class="nav__link" name="summary">Summary</a>
+          <a href="#summary" class="nav__link" alt="summary">Summary</a>
         </li>
         <li class="nav__item">
-          <a href="#skills" class="nav__link" name="skills">Skills</a>
+          <a href="#skills" class="nav__link" alt="skills">Skills</a>
         </li>
         <li class="nav__item">
-          <a href="#code" class="nav__link" name="code">Code</a>
+          <a href="#code" class="nav__link" alt="code">Code</a>
         </li>
         <li class="nav__item">
-          <a href="#projects" class="nav__link" name="projects">Projects</a>
+          <a href="#projects" class="nav__link" alt="projects">Projects</a>
         </li>
         <li class="nav__item">
-          <a href="#courses" class="nav__link" name="courses">Courses</a>
+          <a href="#courses" class="nav__link" alt="courses">Courses</a>
         </li>
         <li class="nav__item">
-          <a href="#language" class="nav__link" name="language">Language</a>
+          <a href="#language" class="nav__link" alt="language">Language</a>
         </li>
       </ul>
     </nav>
@@ -61,23 +61,23 @@
         <ul class="contact__item">
           <li class="contact__list">
             <a href="https://www.google.com/maps/@46.6488224,32.621587,11z" target="_blank" rel="noopener noreferrer"
-              title="map" class="main__link" name="map">
+              title="map" class="main__link" alt="map">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
             <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github"
-              class="main__link" name="github">
+              class="main__link" alt="github">
               <i class="fa fa-github" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
-            <a href="malito:oleg1le@gmail.com" title="email" class="main__link" name="email">
+            <a href="malito:oleg1le@gmail.com" title="email" class="main__link" alt="email">
               <i class="fa fa-envelope" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
-            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link" name="telegram">
+            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link" alt="telegram">
               <i class="fa fa-telegram" aria-hidden="true"></i>
             </a>
           </li>
@@ -125,15 +125,15 @@
         <h2>Projects</h2>
         <ul class="projects__list">
           <li class="projects__item">
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank" name="eco sound">Eco
+            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank" alt="eco sound">Eco
               sound</a>
           </li>
           <li class="projects__item">
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/game/" target="_blank" name="tic tac">Tic Tac
+            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/game/" target="_blank" alt="tic tac">Tic Tac
               Toe</a>
           </li>
           <li class="projects__item">
-            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank" name="cv">CV</a>
+            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank" alt="cv">CV</a>
           </li>
         </ul>
       </section>
@@ -170,7 +170,7 @@
   <footer class="wrapper">
     <ul class="footer__list">
       <li class="footer__item">
-        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github" name="github">
+        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github" alt="github">
           <div class="footer__github"></div>
         </a>
       </li>
@@ -178,7 +178,7 @@
         <p class="footer__year">© 2022</p>
       </li>
       <li class="footer__item">
-        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool" name="rsscool">
+        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool" alt="rsscool">
           <div class="footer__rsschool"></div>
         </a>
       </li>
