fix: fixed anchor link

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#contacts" class="nav__link" alt="">Contacts</a>
+          <a href="#contacts" class="nav__link">Contacts</a>
         </li>
         <li class="nav__item">
-          <a href="#summary" class="nav__link" alt="">Summary</a>
+          <a href="#summary" class="nav__link">Summary</a>
         </li>
         <li class="nav__item">
-          <a href="#skills" class="nav__link" alt="">Skills</a>
+          <a href="#skills" class="nav__link">Skills</a>
         </li>
         <li class="nav__item">
-          <a href="#code" class="nav__link" alt="">Code</a>
+          <a href="#code" class="nav__link">Code</a>
         </li>
         <li class="nav__item">
-          <a href="#projects" class="nav__link" alt="">Projects</a>
+          <a href="#projects" class="nav__link">Projects</a>
         </li>
         <li class="nav__item">
-          <a href="#courses" class="nav__link" alt="">Courses</a>
+          <a href="#courses" class="nav__link">Courses</a>
         </li>
         <li class="nav__item">
-          <a href="#language" class="nav__link" alt="">Language</a>
+          <a href="#language" class="nav__link">Language</a>
         </li>
       </ul>
     </nav>
@@ -61,23 +61,23 @@
         <ul class="contact__item">
           <li class="contact__list">
             <a href="https://www.google.com/maps/@46.6488224,32.621587,11z" target="_blank" rel="noopener noreferrer"
-              title="map" class="main__link" alt="">
+              title="map" class="main__link">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
             <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title=""
-              class="main__link" alt="github">
+              class="main__link">
               <i class="fa fa-github" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
-            <a href="malito:oleg1le@gmail.com" title="email" class="main__link" alt="">
+            <a href="malito:oleg1le@gmail.com" title="email" class="main__link">
               <i class="fa fa-envelope" aria-hidden="true"></i>
             </a>
           </li>
           <li class="contact__list">
-            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link" alt="">
+            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link">
               <i class="fa fa-telegram" aria-hidden="true"></i>
             </a>
           </li>
@@ -126,15 +126,15 @@
         <h2>Projects</h2>
         <ul class="projects__list">
           <li class="projects__item">
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank" alt="">Eco
+            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank">Eco
               sound</a>
           </li>
           <li class="projects__item">
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/game/" target="_blank" alt="">Tic Tac
+            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/game/" target="_blank">Tic Tac
               Toe</a>
           </li>
           <li class="projects__item">
-            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank" alt="">CV</a>
+            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank">CV</a>
           </li>
         </ul>
       </section>
@@ -171,7 +171,7 @@
   <footer class="wrapper">
     <ul class="footer__list">
       <li class="footer__item">
-        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github" alt="">
+        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github">
           <div class="footer__github"></div>
         </a>
       </li>
@@ -179,7 +179,7 @@
         <p class="footer__year">© 2022</p>
       </li>
       <li class="footer__item">
-        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool" alt="">
+        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool">
           <div class="footer__rsschool"></div>
         </a>
       </li>
