--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="assets/svg/favicon.png">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>CV</title>
   </head>
 <body>
-  <header class="header wrapper">
+  <!-- <header class="header wrapper">
     <div class="logo">
       <img src="assets/svg/logo.png" alt="logo">
     </div>
@@ -185,6 +185,6 @@
       </li>
     </ul>
   </footer>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="index.js"></script> -->
 </body>
 </html>
