--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>CV</title>
   </head>
 <body>
-  <!-- <header class="header wrapper">
+  <header class="header wrapper">
     <div class="logo">
       <img src="assets/svg/logo.png" alt="logo">
     </div>
@@ -249,6 +249,6 @@
       </li>
     </ul>
   </footer>
-  <script type="module" src="index.js"></script> -->
+  <script type="module" src="index.js"></script>
 </body>
 </html>
