fix: fixed html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="google" content="notranslate">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="assets/svg/favicon.png">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>CV</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="google" content="notranslate">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="assets/svg/favicon.png">
+  <link rel="stylesheet" href="style.css">
+  <title>CV</title>
+</head>
+
 <body>
   <header class="header wrapper">
     <div class="logo">
@@ -21,7 +23,6 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
-<<<<<<< HEAD
           <a href="#contacts" class="nav__link">Contacts</a>
         </li>
         <li class="nav__item">
@@ -38,30 +39,6 @@
         </li>
         <li class="nav__item">
           <a href="#courses" class="nav__link">Courses</a>
-        </li>
-        <li class="nav__item">
-          <a href="#language" class="nav__link">Language</a>
-=======
-          <a href="#contacts" class="nav__link" alt="contacts">Contacts</a>
-        </li>
-        <li class="nav__item">
-          <a href="#summary" class="nav__link" alt="summary">Summary</a>
-        </li>
-        <li class="nav__item">
-          <a href="#skills" class="nav__link" alt="skills">Skills</a>
-        </li>
-        <li class="nav__item">
-          <a href="#code" class="nav__link" alt="code">Code</a>
-        </li>
-        <li class="nav__item">
-          <a href="#projects" class="nav__link" alt="projects">Projects</a>
-        </li>
-        <li class="nav__item">
-          <a href="#courses" class="nav__link" alt="courses">Courses</a>
-        </li>
-        <li class="nav__item">
-          <a href="#language" class="nav__link" alt="language">Language</a>
->>>>>>> parent of 716e6a4 (faet: fix link anchor)
         </li>
       </ul>
     </nav>
@@ -83,13 +60,12 @@
         <ul class="contact__item">
           <li class="contact__list">
             <a href="https://www.google.com/maps/@46.6488224,32.621587,11z" target="_blank" rel="noopener noreferrer"
-<<<<<<< HEAD
               title="map" class="main__link">
               <i class="fa fa-map-marker" aria-hidden="true"> </i>
             </a>
           </li>
           <li class="contact__list">
-            <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title=""
+            <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github"
               class="main__link">
               <i class="fa fa-github" aria-hidden="true"> </i>
             </a>
@@ -102,31 +78,12 @@
           <li class="contact__list">
             <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link">
               <i class="fa fa-telegram" aria-hidden="true"> </i>
-=======
-              title="map" class="main__link" alt="map">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li class="contact__list">
-            <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github"
-              class="main__link" alt="github">
-              <i class="fa fa-github" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li class="contact__list">
-            <a href="malito:oleg1le@gmail.com" title="email" class="main__link" alt="email">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li class="contact__list">
-            <a href="https://t.me/oleh_le" target="_blank" rel="noopener noreferrer" title="oleh_le" class="main__link" alt="telegram">
-              <i class="fa fa-telegram" aria-hidden="true"></i>
->>>>>>> parent of 716e6a4 (faet: fix link anchor)
             </a>
           </li>
         </ul>
       </section>
-    </div><div class="block__right">
+    </div>
+    <div class="block__right">
       <section class="section section__summary" id="summary">
         <h2>Summary</h2>
         <p>
@@ -168,7 +125,6 @@
         <h2>Projects</h2>
         <ul class="projects__list">
           <li class="projects__item">
-<<<<<<< HEAD
             <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank">Eco
               sound</a>
           </li>
@@ -177,18 +133,7 @@
               Toe</a>
           </li>
           <li class="projects__item">
-            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank">CV</a>
-=======
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/ecosounds/" target="_blank" alt="eco sound">Eco
-              sound</a>
-          </li>
-          <li class="projects__item">
-            <a href="https://rolling-scopes-school.github.io/oleg1le-JSFEPRESCHOOL/game/" target="_blank" alt="tic tac">Tic Tac
-              Toe</a>
-          </li>
-          <li class="projects__item">
-            <a href="https://oleg1le.github.io/rsschool-cv-02/" target="_blank" alt="cv">CV</a>
->>>>>>> parent of 716e6a4 (faet: fix link anchor)
+            <a href="https://oleg1le.github.io/rsschool-cv/" target="_blank">CV</a>
           </li>
         </ul>
       </section>
@@ -225,30 +170,21 @@
   <footer class="wrapper">
     <ul class="footer__list">
       <li class="footer__item">
-<<<<<<< HEAD
         <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github">
-          <div class="footer__github"> </div>
-=======
-        <a href="https://github.com/oleg1le" target="_blank" rel="noopener noreferrer" title="github" alt="github">
           <div class="footer__github"></div>
->>>>>>> parent of 716e6a4 (faet: fix link anchor)
         </a>
       </li>
       <li class="footer__item">
         <p class="footer__year">© 2022</p>
       </li>
       <li class="footer__item">
-<<<<<<< HEAD
         <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool">
-          <div class="footer__rsschool"> </div>
-=======
-        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer" title="rsschool" alt="rsscool">
           <div class="footer__rsschool"></div>
->>>>>>> parent of 716e6a4 (faet: fix link anchor)
         </a>
       </li>
     </ul>
   </footer>
   <script type="module" src="index.js"></script>
 </body>
+
 </html>
